# unexpectedcrash

./: README.md
build-catchfly-MinGW64V800r1_GCCV931_QTV5152-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-catchfly-MinGW64V800r1_GCCV931_QTV5152-Debug/.qtc_clangd/: compile_commands.json
build-catchfly-MinGW64V800r1_GCCV931_QTV5152-Debug/catchfly_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-catchfly-MinGW64V800r1_GCCV931_QTV5152-Debug/catchfly_autogen/45X7Y3CNVI/: moc_CandleContainerSingle.cpp  moc_CandleContainerSingle.cpp.d  moc_CandleCreatorDF.cpp  moc_CandleCreatorDF.cpp.d  moc_CandleCreatorJ.cpp  moc_CandleCreatorJ.cpp.d
build-catchfly-MinGW64V800r1_GCCV931_QTV5152-Debug/catchfly_autogen/5DMGFAVLPV/: moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
build-catchfly-MinGW64V800r1_GCCV931_QTV5152-Debug/catchfly_autogen/BIPT3OBWUN/: moc_candlecontainer.cpp  moc_candlecontainer.cpp.d  moc_candlecontainer_item.cpp  moc_candlecontainer_item.cpp.d  moc_candlecontainer_list.cpp  moc_candlecontainer_list.cpp.d
build-catchfly-MinGW64V800r1_GCCV931_QTV5152-Debug/catchfly_autogen/BQZPQKNJMC/: moc_popup_baordcheckbox.cpp  moc_popup_baordcheckbox.cpp.d  moc_popup_favlist.cpp  moc_popup_favlist.cpp.d  moc_popup_floattool.cpp  moc_popup_floattool.cpp.d  moc_popup_monitor.cpp  moc_popup_monitor.cpp.d
build-catchfly-MinGW64V800r1_GCCV931_QTV5152-Debug/catchfly_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_qcustomplot.cpp  moc_qcustomplot.cpp.d  moc_section.cpp  moc_section.cpp.d
build-catchfly-MinGW64V800r1_GCCV931_QTV5152-Debug/catchfly_autogen/IU4RFGK4WG/: moc_crossline.cpp  moc_crossline.cpp.d  moc_cursorhelper.cpp  moc_cursorhelper.cpp.d  moc_customplot.cpp  moc_customplot.cpp.d
build-catchfly-MinGW64V800r1_GCCV931_QTV5152-Debug/catchfly_autogen/T3WM7NT2BE/: moc_QWidgetsListWidget.cpp  moc_QWidgetsListWidget.cpp.d  moc_QWidgetsListWidgetDisplay.cpp  moc_QWidgetsListWidgetDisplay.cpp.d
build-catchfly-MinGW64V800r1_GCCV931_QTV5152-Debug/catchfly_autogen/TUD6WKP52B/: moc_settingeditor.cpp  moc_settingeditor.cpp.d  moc_settingstree.cpp  moc_settingstree.cpp.d  moc_settingwidget.cpp  (+3 more)
catchfly/: CMakeLists.txt  global.h  globalplus.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h
catchfly/Board/containsshow/: CandleBoardContains - 副本.cpp  CandleBoardContains.cpp  CandleBoardContains.ui  CandleBoardContains_Item.cpp  CandleBoardContains_Item.h  CandleBoardContains_Item.ui  CandleBoardContains_List.cpp  CandleBoardContains_List.h  candleboardcontains - 副本.h  candleboardcontains.h
catchfly/Plot/: CandleCreatorDF.cpp  CandleCreatorDF.h
catchfly/RealTime/: RealtimeData.cpp  RealtimeData.h  RealtimeMonitor.cpp  RealtimeMonitor.h  boardsnapshot.cpp  boardsnapshot.h  boardsnapshot.ui
temp/: dailydata.csv  normal_boards_contains_qmap.txt  realtime-2022-02-21-23-01-37.csv  secturity_info.csv  selected_boards_a.txt  selected_boards_b.txt
(+1445 files in other folders)
